fix: corrections sécurité critiques avant production
- Autorisation manquante sur confirmerPaiement et envoyerRappel (tout user pouvait confirmer)
- Vérification appartenance groupe dans modifierOrdre
- BusinessException : erreurs métier sûres vs RuntimeException loguée côté serveur
- @Max sur nombreMembres (500) et montantCotisation pour éviter l'abus de ressources
- JWT_SECRET sans valeur par défaut — échoue au démarrage si non défini en prod
- CORS piloté par CORS_ALLOWED_ORIGINS (variable d'env)
- .env.example mis à jour, lien invitation via FRONTEND_URL

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>